--- a/NewTask.xaml
+++ b/NewTask.xaml
@@ -15,8 +15,18 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
-        <TextBox Grid.Row="0" Margin="2.5" x:Name="taskTitle" MaxLength="80"></TextBox>
-        <TextBox Grid.Row="1" Margin="2.5" x:Name="taskDesc" MaxLength="2000"></TextBox>
+        <TextBox Grid.Row="0" 
+                 Margin="2.5" 
+                 x:Name="taskTitle" 
+                 MaxLength="50"></TextBox>
+        
+        <TextBox Grid.Row="1" 
+                 Margin="2.5" 
+                 x:Name="taskDesc" 
+                 MaxLength="2000"
+                 AcceptsReturn="True"
+                 AcceptsTab="True"
+                 TextWrapping="WrapWithOverflow"></TextBox>
 
         <Grid Grid.Row="2">
             <Grid.ColumnDefinitions>
