Scrollbar visibility on textboxes set to auto

--- a/TaskList.xaml
+++ b/TaskList.xaml
@@ -110,7 +110,8 @@
                      x:Name="taskDesc"
                      AcceptsReturn="True"
                      AcceptsTab="True"
-                     TextWrapping="WrapWithOverflow">
+                     TextWrapping="WrapWithOverflow"
+                     VerticalScrollBarVisibility="Auto">
 
                 <TextBox.Style>
                     <Style TargetType="TextBox">
