--- a/NewTask.xaml
+++ b/NewTask.xaml
@@ -26,7 +26,8 @@
                  MaxLength="2000"
                  AcceptsReturn="True"
                  AcceptsTab="True"
-                 TextWrapping="WrapWithOverflow"></TextBox>
+                 TextWrapping="WrapWithOverflow"
+                 VerticalScrollBarVisibility="Auto"></TextBox>
 
         <Grid Grid.Row="2">
             <Grid.ColumnDefinitions>
